feat: creamos el get by id para traer el stream del audio
